tooling/nargo_cli/tests/snapshots/execution_success/regression_3394/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() {
    let x: i8 = -128;
    println(x);
}
